--- a/presentation/src/main/res/layout/fragment_my_page_edit.xml
+++ b/presentation/src/main/res/layout/fragment_my_page_edit.xml
@@ -4,6 +4,9 @@
 
     <data>
         <variable
+            name="user"
+            type="kr.foorun.model.user.User" />
+        <variable
             name="viewModel"
             type="kr.foorun.uni_eat.feature.mypage.edit.MyPageEditViewModel" />
     </data>
@@ -100,7 +103,7 @@
                         android:hint="@string/nick_form_hint"
                         app:editUnderLineVisible="true"
                         app:textWatcher="@{viewModel.nickTextWatcher}"
-                        app:setEditText="@{viewModel.user.name}"
+                        app:setEditText="@{user.name}"
                         app:setUnderLineMatch="@{true}"
                         app:editRearVisible="true"
                         app:editRearImage="@drawable/check"
@@ -141,7 +144,7 @@
                         android:maxLength="50"
                         app:setUnderLineMatch="@{true}"
                         app:textWatcher="@{viewModel.introduceTextWatcher}"
-                        app:setEditText="@{viewModel.user.introduce}"
+                        app:setEditText="@{user.introduce}"
                         android:layout_marginTop="15dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/introduce" />
