--- a/presentation/src/main/res/layout/fragment_event_detail.xml
+++ b/presentation/src/main/res/layout/fragment_event_detail.xml
@@ -95,7 +95,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
                     android:layout_marginTop="10dp"
-                    android:text="@{eventCoupon.discription}"
+                    android:text="@{eventCoupon.description}"
                     android:textSize="15sp" />
 
                 <kr.foorun.uni_eat.base.view.base.base_layout.BaseTextView
@@ -116,7 +116,7 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="38.05dp"
                     android:letterSpacing="-0.05"
-                    android:text="@{eventCoupon.Notice}"
+                    android:text="@{eventCoupon.notice}"
                     android:textSize="13sp" />
         <Button
             android:id="@+id/event_detail_use_coupon_BTN"
