--- a/presentation/src/main/res/layout/item_home_event.xml
+++ b/presentation/src/main/res/layout/item_home_event.xml
@@ -49,7 +49,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/text_size_large_15"
-            android:text="@{eventCoupon.content}"
+            android:text="@{eventCoupon.description}"
             android:layout_marginTop="12dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/line"/>
