add 이벤트 디테일화면 이벤트 종료시 버튼 레이아웃 변경

--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -23,6 +23,8 @@
     <color name="gray3">#E2E2E2</color>
     <color name="gray4">#595959</color>
     <color name="gray5">#888888</color>
+    <color name="gray6">#DBDBDB</color>
+
     <color name="search_tag_non">#E5E4EC</color>
     <color name="search_tag_pick">#201F31</color>
     <color name="navy">#2D2C3C</color>
