--- a/presentation/src/main/res/layout/item_home_event.xml
+++ b/presentation/src/main/res/layout/item_home_event.xml
@@ -36,6 +36,24 @@
             app:layout_constraintTop_toBottomOf="@id/home_item_event_image"/>
 
         <kr.foorun.uni_eat.base.view.base.base_layout.BaseImageView
+            android:layout_width="9dp"
+            android:layout_height="18dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/white_semicircle_right"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/home_item_event_image"
+            app:layout_constraintBottom_toBottomOf="@id/home_item_event_image"/>
+
+        <kr.foorun.uni_eat.base.view.base.base_layout.BaseImageView
+            android:layout_width="9dp"
+            android:layout_height="18dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/white_semicircle_left"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/home_item_event_image"
+            app:layout_constraintBottom_toBottomOf="@id/home_item_event_image"/>
+
+        <kr.foorun.uni_eat.base.view.base.base_layout.BaseImageView
             android:id="@+id/line"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
